<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MetroTuner</string>
    <string name="placeholder">Just text</string>
    <string name="metronome_start">0</string>
    <string name="metronome_start_pause_btn">Start/Pause</string>
    <string-array name="tabs_names">
        <item>Metronome</item>
        <item>Tuner</item>
    </string-array>
    <string name="beats_divider">/</string>
    <string name="settings_confirm_btn">Confirm!</string>
    <string name="bpm_hint">BPM</string>
    <string name="beats_hint">beats</string>
    <string name="divider_hint">divider</string>
    <string name="bpm_text">%1$d</string>
    <string name="beats_text">Beats: &lt;u>%1$d&lt;/u></string>
    <string name="metronome_preset">bpm: %1$d beats: %2$d accent %3$s</string>
    <string name="save_preset">Save preset</string>
    <string name="hint_save_profile">Enter name…</string>
    <string name="play_pause_btn_placeholder">Play/pause</string>
    <string name="min_5_bpm_btn_text">-5</string>
    <string name="min_1_bpm_btn_text">-1</string>
    <string name="pls_1_bpm_btn_text">+1</string>
    <string name="pls_5_bpm_btn_text">+5</string>
    <string name="accent_text">accent: &lt;u>%1$s&lt;/u></string>
    <string name="tempo_bpm_text">&#119135; = %1$d</string>
    <string name="metronome_tempo_text">Tempo: &lt;u>%1$s&lt;/u></string>
    <string name="a4_dec_text">&lt;</string>
    <string name="a4_inc_text">">"</string>
    <string name="a4_value_text">%1$d Hz</string>
    <string name="set_tempo_fragment_name">Tempo</string>
    <string name="beats_config_fragment_name">Beats</string>
</resources>