<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/metronome_state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metronome_start"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <LinearLayout
        android:id="@+id/metronome_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:id="@+id/bpm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bpm_text" />

        <TextView
            android:id="@+id/beats_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beats_text" />


    </LinearLayout>



    <Button
        android:id="@+id/metronome_start_pause_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metronome_start_pause_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/metronome_state_text" />


</androidx.constraintlayout.widget.ConstraintLayout>